--- a/lighthouse-home.html
+++ b/lighthouse-home.html
@@ -376,9 +376,9 @@ SPDX-License-Identifier: Apache-2.0
   --color-gray-800: #424242;
   --color-gray-900: #212121;
   --color-gray: #000000;
-  --color-green-700: #080;
-  --color-green: #0c6;
-  --color-lime-400: #D3E156;
+  --color-brand-700: hsl(var(--brand));
+  --color-brand: hsl(var(--brand));
+  --color-accent-400: hsl(var(--brand));
   --color-orange-50: #FFF3E0;
   --color-orange-700: #C33300;
   --color-orange: #fa3;
@@ -394,8 +394,8 @@ SPDX-License-Identifier: Apache-2.0
   --color-fail: var(--color-red);
   --color-hover: var(--color-gray-50);
   --color-informative: var(--color-blue-900);
-  --color-pass-secondary: var(--color-green-700);
-  --color-pass: var(--color-green);
+  --color-pass-secondary: var(--color-brand-700);
+  --color-pass: var(--color-brand);
   --color-not-applicable: var(--color-gray-600);
 
   /* Component variables */
@@ -506,7 +506,7 @@ SPDX-License-Identifier: Apache-2.0
     --color-gray-700: var(--color-gray-400);
     --color-gray-50: #757575;
     --color-gray-600: var(--color-gray-500);
-    --color-green-700: var(--color-green);
+  --color-brand-700: var(--color-brand);
     --color-orange-700: var(--color-orange);
     --color-red-700: var(--color-red);
     --color-teal-600: var(--color-cyan-500);
@@ -2326,7 +2326,7 @@ details[open] .lh-clump-toggletext--hide { display: block;}
 }
 .lh-element-screenshot__element-marker {
   position: absolute;
-  outline: 2px solid var(--color-lime-400);
+  outline: 2px solid var(--color-accent-400);
 }
 .lh-element-screenshot__overlay {
   position: fixed;
